1. added navbar 2. changed sidebar behaviour 3. moved toggle into sidebar 4. fixed overflow issue 5. made all pages work with base.html

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,3 +1,20 @@
+#standard {
+    margin-top: 56px;
+    max-width: 100%;
+    margin-left: 300px;
+    overflow: hidden;
+    padding-left: 8px;
+    padding-right: 16px;
+}
+
+#standard pre {
+    max-width: 100%;
+    padding-right: 16px;
+
+}
+
+
+
 .tooltipDiv {
     display: none;
     width: auto;
@@ -26,6 +43,9 @@
     line-height: 24px;
     margin-left:8px;
     margin-right:8px;
+    background: none;
+    width: auto;
+    overflow: hidden;
 }
 
 
@@ -46,6 +66,16 @@
     align-self: flex-end;
 }
 
+#sidebar-collapse{
+ text-align: right;  
+ margin-right: 8px;
+ margin-bottom: 16px;
+}
+
+.sidebar-content{
+    display: block;
+}
+
 .sidebar-row{
     max-width: 220px;
     margin: 16px !important;
@@ -61,8 +91,6 @@
 }
 
 .serif-mode{
-    background-color: white;
-    color:black;
     font-family: serif !important;
 }
 #make-serif{
@@ -84,8 +112,6 @@
 }
 
 .sans-mode{
-    background-color: white;
-    color:black;
     font-family: sans-serif !important;
 }
 #make-sans{
@@ -165,7 +191,8 @@
 }
 
 .settings-button{
-    background-color: #FFEABD ;
+    border: 1px solid;
+    background-color: white;
     color: black;
 }
 .actions-button{
@@ -181,13 +208,7 @@
 }
 */
 
-.wrapper {
-    display: flex;
-    width: 100%;
-    align-items: stretch;
-    margin-left: -15px;
-}
-
+/*
 #sidebar {
     min-width: 260px;
     max-width: 260px;
@@ -198,6 +219,21 @@
 #sidebar.active {
     margin-left: -260px;
 }
+*/
+
+#sidebar {
+    height: 100%; /* 100% Full-height */
+    width: 300px; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0;
+    left: 0;
+    background-color: #111; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+  }
+
+
 
 a[data-toggle="collapse"] {
     position: relative;
